# telescopepartners

./: README.md  challenge-instructions.txt  pyproject.toml
data/: companies.csv
src/: config.py  main.py  read_companies.py
